--- a/lyrics.css
+++ b/lyrics.css
@@ -6,18 +6,44 @@ p{
     font-size: 30px;
 }
 
-main{
-    margin-left: 35%;
-}
+/* main{
+    margin: auto;
+} */
 
 #text-section{
+    margin: auto;
     border-radius: 3%;
     height: 200px;
-    width: 90%;
+    width: 500px;
     box-sizing: border-box;
     padding: 10px 7%;
     background-image: url("index.jpg");
     background-size: cover;
     background-color: grey;
     background-blend-mode: multiply;
+}
+
+#buttons-section{
+    position: relative;
+    left: 45%;
+}
+
+button{
+    padding: 15px 32px;
+    border: none;
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+button:hover{
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+#ply{
+    background-color: green;
+}
+#pse{
+    background-color: blue;
 }
