--- a/lyrics.css
+++ b/lyrics.css
@@ -25,7 +25,7 @@ p{
 
 #buttons-section{
     position: relative;
-    left: 45%;
+    left: 40%;
 }
 
 button{
@@ -47,3 +47,27 @@ button:hover{
 #pse{
     background-color: blue;
 }
+#stp{
+    background-color: red;
+}
+
+form{
+    margin-left: auto;
+}
+
+#seek{
+    width: 500px;
+}
+
+input{
+    margin-left: 31.5%;
+    accent-color: orange;
+}
+
+/* #current-display{
+    float: left;
+}
+
+#duration-display{
+    float: right;
+} */
